--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <main>
         <div class = "head">
-            <img src="img/lizard.png" class="lizard"/>
-            <img src="img/logo.png" class="logo" />
+            <img src="svg/lizard.svg" class="lizard"/>
+            <img src="svg/logo.svg" class="logo" />
+            <img src="svg/link.svg" class = "link" />
         </div>
         <article class = "register-form">
             <h3>Register Form</h3>
@@ -33,10 +34,10 @@
                     <Label for="email"><i class="fas fa-envelope"></i></Label>
                     <input type="email" id="email" class="input-txt" placeholder="Email">
                 </div>
-                <div class="select-div">
+                <div class="input-div">
                     <Label for="location"><i class="fas fa-map-marker-alt"></i></Label>
-                    <select id="location">
-                        <option> --- </option>
+                    <select id="location" class="input-txt">
+                        <option value="your-location"> Your Location </option>
                         <option value="warszawa">Warszawa</option>
                         <option value="krakow">Kraków</option>
                         <option value="zakopane">Zakopane</option>
@@ -46,9 +47,9 @@
                     </select>
                 </div>
                 <div class = "check-div">
-                    <input type="checkbox" id="confirm-things"> <label for="confirm-things">have read and accept the terms od use</label>
+                    <input type="checkbox" id="confirm-things" checked> <label for="confirm-things" class="confirm-things">I have read and accept the terms od use</label>
                 </div>
-                <button type="submit" class="btn-submit">Sigin up</button>
+                <button type="submit" class="btn-submit btn-sign-up">Sigin up</button>
             </form>
         </article>
         <article class="sign-in">
@@ -61,6 +62,9 @@
                 <div class="input-div">
                     <Label for="password1"><i class="fas fa-unlock-alt"></i></Label>
                     <input type="password" id="password1" class="input-txt" placeholder="Password">
+                </div>
+                <div class = "check-div-sign">
+                    <input type="checkbox" id="confirm-things" checked> <label for="confirm-things" class="confirm-things">Remember me</label>
                 </div>
                 <button type="submit" class="btn-submit">Sigin in</button>
             </form>
@@ -77,7 +81,7 @@
                     <input type="tel" id="phone" class="input-txt" placeholder="Enter your Phone number">
                 </div>
                 <button type="submit" class="btn-submit">Send</button>
-                <button type="submit" class="btn-submit">Done</button>
+                <button type="submit" class="btn-submit" disabled>Done</button>
             </form>
         </article>
         <article class = "subscribe-form">
@@ -111,9 +115,9 @@
             </form>
         </article>
         <div class="foto">
-            <img src="img/lizard.png">
-            <img src="img/logo.png" >
-            <span>www.mosteralb.com</span>
+            <img src="svg/lizard.svg">
+            <img src="svg/logo.svg" >
+            <img src="svg/link.svg">
         </div>
     </main>
 </body>
