--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
             </form>
         </article>
         <div class="foto">
-            <img src="svg/lizard.svg">
-            <img src="svg/logo.svg" >
-            <img src="svg/link.svg">
+            <img src="svg/lizard.svg" class="lizard-bottom">
+            <img src="svg/logo.svg" class = "logo-bottom">
+            <img src="svg/link.svg" class = "link-bottom">
         </div>
     </main>
 </body>
