--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="input-div">
                     <Label for="location"><i class="fas fa-map-marker-alt"></i></Label>
                     <select id="location" class="input-txt">
-                        <option value="your-location"> Your Location </option>
+                        <option default> Your Location </option>
                         <option value="warszawa">Warszawa</option>
                         <option value="krakow">Kraków</option>
                         <option value="zakopane">Zakopane</option>
@@ -47,7 +47,7 @@
                     </select>
                 </div>        
                 <div class = "check-div">
-                    <input type="checkbox" id="confirm-things" checked> <label for="confirm-things" class="confirm-things">I have read and accept the terms of use</label>
+                    <input type="checkbox" id="confirm-things" checked> <label for="confirm-things" class="confirm-things"><span class="white-border"></span> have read and accept the terms of use</label>
                 </div>
                 <button type="submit" class="btn-submit btn-sign-up">Sigin up</button>
             </form>
