--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </select>
                 </div>        
                 <div class = "check-div">
-                    <input type="checkbox" id="confirm-things" checked> <label for="confirm-things" class="confirm-things"><span class="white-border"></span> have read and accept the terms of use</label>
+                    <input type="checkbox" id="confirm-things"> <label for="confirm-things" class="confirm-things"><span class="white-border"></span> have read and accept the terms of use</label>
                 </div>
                 <button type="submit" class="btn-submit btn-sign-up">Sigin up</button>
             </form>
@@ -65,7 +65,7 @@
                 </div>
             <div class="wap-check">
                 <div class = "check-div-sign">
-                    <input type="checkbox" id="sign-check" checked> <label for="sign-check" class="confirm-things">Remember me</label>
+                    <input type="checkbox" id="sign-check"> <label for="sign-check" class="confirm-things">Remember me</label>
                 </div>
                 <button type="submit" class="btn-submit btn-sign-in">Sigin in</button>
             </div>
@@ -74,7 +74,7 @@
         <article class="recorver-form">
             <h3>Recorver Form</h3>
             <form>
-                <div class="input-div">
+                  <div class="input-div">
                     <Label for="email1"><i class="fas fa-envelope"></i></Label>
                     <input type="email" id="email1" class="input-txt" placeholder="Enter your Email">
                 </div>
@@ -114,7 +114,7 @@
                 </div>
                 <textarea class="text-email" placeholder="Type your message ..."></textarea>
                 <div class = "check-div">
-                    <input type="checkbox" id="send-copy" checked> <label for="send-copy" class="confirm-things">Send a copy to my Email</label>
+                    <input type="checkbox" id="send-copy"> <label for="send-copy" class="confirm-things">Send a copy to my Email</label>
                 </div>
                 <button type="submit" class="btn-submit btn-sign-up">Send Email</button>
             </form>
