--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <main>
-        <div class = "head">
-            <img src="svg/lizard.svg" class="lizard"/>
-            <img src="svg/logo.svg" class="logo" />
-            <img src="svg/link.svg" class = "link" />
-        </div>
+        <img src="svg/lizard.svg" class="lizard"/>
+        <img src="svg/logo.svg" class="logo" />
+        <!-- <img src="svg/link.svg" class = "link" /> -->
         <article class = "register-form">
             <h3>Register Form</h3>
             <form>
@@ -119,11 +117,9 @@
                 <button type="submit" class="btn-submit btn-sign-up">Send Email</button>
             </form>
         </article>
-        <div class="foto">
-            <img src="svg/lizard.svg" class="lizard-bottom">
-            <img src="svg/logo.svg" class = "logo-bottom">
-            <img src="svg/link.svg" class = "link-bottom">
-        </div>
+        <img src="svg/lizard.svg" class="lizard-bottom">
+        <img src="svg/logo.svg" class = "logo-bottom">
+        <img src="svg/link.svg" class = "link-bottom">
     </main>
 </body>
 </html>
