--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <img src="svg/lizard.svg" class="lizard"/>
+        <!-- <img src="img/lizard.png" class="lizard"/> -->
         <img src="svg/logo.svg" class="logo" />
         <!-- <img src="svg/link.svg" class = "link" /> -->
         <article class = "register-form">
